--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,6 +8,11 @@ sidebar_position: 4
 
 ### New commands
 
+
+**Azure Active Directory**
+
+- [aad administrativeunit member list](../cmd/aad/administrativeunit/administrativeunit-member-list.mdx) - retrieves a list of members of an administrative unit in Azure AD [#5640](https://github.com/pnp/cli-microsoft365/issues/5640)
+
 **External content:**
 
 - [external connection doctor](../cmd/external/connection/connection-doctor.mdx) - checks if the external connection is correctly configured for use with a specified user experience in Microsoft 365 [#5675](https://github.com/pnp/cli-microsoft365/issues/5675)
