Adds userName option to 'teams user app add'. Closes #5702

--- a/docs/docs/cmd/teams/user/user-app-remove.mdx
+++ b/docs/docs/cmd/teams/user/user-app-remove.mdx
@@ -20,10 +20,10 @@ m365 teams user app remove [options]
 : Name of the app instance installed for the user. Specify either `id` or `name`.
 
 `--userId [userId]`
-: The ID of the user to uninstall the app for. Specify `userId` or `userName` but not both.
+: The ID of the user to uninstall the app for. Specify either `userId` or `userName`.
 
 `--userName [userName]`
-: The UPN of the user to uninstall the app for. Specify `userId` or `userName` but not both.
+: The UPN of the user to uninstall the app for. Specify either `userId` or `userName`.
 
 `-f, --force`
 : Confirm removal of app for user.
