Added userName option

--- a/docs/docs/cmd/teams/user/user-app-remove.mdx
+++ b/docs/docs/cmd/teams/user/user-app-remove.mdx
@@ -14,16 +14,16 @@ m365 teams user app remove [options]
 
 ```md definition-list
 `--id [id]`
-: The unique id of the app instance installed for the user. Specify either `id` or `name`.
+: The unique id of the app instance installed for the user. Specify either `id` or `name` but not both.
 
 `--name [name]`
-: Name of the app instance installed for the user. Specify either `id` or `name`.
+: Name of the app instance installed for the user. Specify either `id` or `name` but not both.
 
 `--userId [userId]`
-: The ID of the user to uninstall the app for. Specify `userId` or `userName` but not both.
+: The ID of the user to uninstall the app for. Specify either `userId` or `userName` but not both.
 
 `--userName [userName]`
-: The UPN of the user to uninstall the app for. Specify `userId` or `userName` but not both.
+: The UPN of the user to uninstall the app for. Specify either `userId` or `userName` but not both.
 
 `-f, --force`
 : Confirm removal of app for user.
