New command: Assign role with administrative unit scope

--- a/docs/docs/cmd/aad/administrativeunit/administrativeunit-roleassignment-add.mdx
+++ b/docs/docs/cmd/aad/administrativeunit/administrativeunit-roleassignment-add.mdx
@@ -9,7 +9,7 @@ Assigns a Microsoft Entra role with administrative unit scope to a user
 ## Usage
 
 ```sh
-m365 aad administrativeunit roleassignment add
+m365 aad administrativeunit roleassignment add [options]
 ```
 
 ## Options
@@ -113,4 +113,4 @@ m365 aad administrativeunit roleassignment add --administrativeUnitName 'Marketi
 
 ## More information
 
-- Roles with administrative unit scope: https://learn.microsoft.com/en-us/entra/identity/role-based-access-control/admin-units-assign-roles#roles-that-can-be-assigned-with-administrative-unit-scope
+[Roles with administrative unit scope](https://learn.microsoft.com/entra/identity/role-based-access-control/admin-units-assign-roles#roles-that-can-be-assigned-with-administrative-unit-scope)
