--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,10 +8,11 @@ sidebar_position: 4
 
 ### New commands
 
-
 **Azure Active Directory**
 
+- [aad administrativeunit member add](../cmd/aad/administrativeunit/administrativeunit-member-add.mdx) - adds a user, group or device to an administrative unit in Azure AD [#5651](https://github.com/pnp/cli-microsoft365/issues/5651)
 - [aad administrativeunit member list](../cmd/aad/administrativeunit/administrativeunit-member-list.mdx) - retrieves a list of members of an administrative unit in Azure AD [#5640](https://github.com/pnp/cli-microsoft365/issues/5640)
+- [aad app permission add](../cmd/aad/app/app-permission-add.mdx) - adds a delegated or app only permission to an Azure AD App [#4922](https://github.com/pnp/cli-microsoft365/issues/4922)
 
 **External content:**
 
@@ -29,7 +30,8 @@ sidebar_position: 4
 - extended the 'aad group list' command with a 'type' option [#5424](https://github.com/pnp/cli-microsoft365/issues/5424)
 - removed deprecated 'outputFile' options from report documentation [#5681](https://github.com/pnp/cli-microsoft365/issues/5681)
 - refactored codebase to remove Cli.getInstance()
-- extended `teams app install` command with `--name` option [#5704](https://github.com/pnp/cli-microsoft365/issues/5704)
+- extended 'teams app install' command with '--name' option [#5704](https://github.com/pnp/cli-microsoft365/issues/5704)
+- added 'userName' option to 'teams user app add'. Closes [#5702](https://github.com/pnp/cli-microsoft365/issues/5702)
 
 ## [v7.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.2.0)
 
