Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -11,6 +11,7 @@ sidebar_position: 4
 **Azure Active Directory**
 
 - [aad administrativeunit member add](../cmd/aad/administrativeunit/administrativeunit-member-add.mdx) - adds a user, group or device to an administrative unit in Azure AD [#5651](https://github.com/pnp/cli-microsoft365/issues/5651)
+- [aad administrativeunit member get](../cmd/aad/administrativeunit/administrativeunit-member-get.mdx) - retrieves a specific member of an administrative unit in Azure AD [#5653](https://github.com/pnp/cli-microsoft365/issues/5653)
 - [aad administrativeunit member list](../cmd/aad/administrativeunit/administrativeunit-member-list.mdx) - retrieves a list of members of an administrative unit in Azure AD [#5640](https://github.com/pnp/cli-microsoft365/issues/5640)
 - [aad app permission add](../cmd/aad/app/app-permission-add.mdx) - adds a delegated or app only permission to an Azure AD App [#4922](https://github.com/pnp/cli-microsoft365/issues/4922)
 
