--- a/docs/docs/cmd/pa/app/app-get.mdx
+++ b/docs/docs/cmd/pa/app/app-get.mdx
@@ -21,11 +21,11 @@ m365 pa app get [options]
 `-d, --displayName [displayName]`
 : The display name of the Microsoft Power App to get information about.
 
-`-e, --environmentName [environmentName]`
-: The name of the environment for which to retrieve the specified app.
-
 `--asAdmin`
 : Set, to get the Power App as admin. Otherwise will return only your own app.
+
+`-e, --environmentName [environmentName]`
+: The name of the environment for which to retrieve the specified app.
 ```
 
 <Global />
@@ -38,7 +38,7 @@ This command is based on an API that is currently in preview and is subject to c
 
 :::
 
-As maker, you are able to retrieve the Power Apps you own. As administrator, you are also able to retrieve Power Apps from other users. To get the app from other user, use the `asAdmin` option and make sure to specify the `environment` option. You cannot specify only one of the options, when specifying the `environment` option the `asAdmin` option has to be present as well.
+As a maker, you are able to retrieve the Power Apps you own. As administrator, you are also able to retrieve Power Apps from other users. To get the app from another user, use the `asAdmin` option and make sure to specify the `environment` option as well.
 
 
 If you try to retrieve a non-existing Microsoft Power App, you will get the `Request failed with status code 404` error.
@@ -57,7 +57,7 @@ Get information about the specified Microsoft Power App by the app's display nam
 m365 pa app get --displayName App
 ```
 
-Get information about the specified Microsoft Power App from a given environment by the app's name.
+Get information about the specific app you do not have access to.
 
 ```sh
 m365 pa app get --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --asAdmin
