--- a/docs/docs/cmd/spo/site/site-recyclebinitem-restore.mdx
+++ b/docs/docs/cmd/spo/site/site-recyclebinitem-restore.mdx
@@ -33,19 +33,25 @@ m365 spo site recyclebinitem restore [options]
 Restore specific items by given ids from recycle bin of given site.
 
 ```sh
-m365 spo site recyclebinitem restore --siteUrl https://contoso.sharepoint.com/site --ids "ae6f97a7-280e-48d6-b481-0ea986c323da,aadbf916-1f71-42ee-abf2-8ee4802ae291"
+m365 spo site recyclebinitem restore --siteUrl https://contoso.sharepoint.com/sites/project --ids "ae6f97a7-280e-48d6-b481-0ea986c323da,aadbf916-1f71-42ee-abf2-8ee4802ae291"
 ```
 
 Restore all items from the first-stage recycle bin of given site.
 
 ```sh
-m365 spo site recyclebinitem restore --siteUrl https://contoso.sharepoint.com/site --allPrimary
+m365 spo site recyclebinitem restore --siteUrl https://contoso.sharepoint.com/sites/project --allPrimary
 ```
 
 Restore all items from the second-stage recycle bin of given site.
 
 ```sh
 m365 spo site recyclebinitem restore --siteUrl https://contoso.sharepoint.com --allSecondary
+```
+
+Restore all items from the first-stage and second-stage recycle bin of given site.
+
+```sh
+m365 spo site recyclebinitem restore --siteUrl https://contoso.sharepoint.com --allPrimary --allSecondary
 ```
 
 ## Response
