--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -32,7 +32,8 @@ sidebar_position: 4
 - removed deprecated 'outputFile' options from report documentation [#5681](https://github.com/pnp/cli-microsoft365/issues/5681)
 - refactored codebase to remove Cli.getInstance()
 - extended 'teams app install' command with '--name' option [#5704](https://github.com/pnp/cli-microsoft365/issues/5704)
-- added 'userName' option to 'teams user app add'. Closes [#5702](https://github.com/pnp/cli-microsoft365/issues/5702)
+- added 'userName' option to 'teams user app add' [#5702](https://github.com/pnp/cli-microsoft365/issues/5702)
+- Updates Power Automate commands to use new API endpoint [#5715](https://github.com/pnp/cli-microsoft365/issues/5715)
 
 ## [v7.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.2.0)
 
