Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -33,7 +33,10 @@ sidebar_position: 4
 - refactored codebase to remove Cli.getInstance()
 - extended 'teams app install' command with '--name' option [#5704](https://github.com/pnp/cli-microsoft365/issues/5704)
 - added 'userName' option to 'teams user app add' [#5702](https://github.com/pnp/cli-microsoft365/issues/5702)
-- Updates Power Automate commands to use new API endpoint [#5715](https://github.com/pnp/cli-microsoft365/issues/5715)
+- extended Power Automate commands to use new API endpoint [#5715](https://github.com/pnp/cli-microsoft365/issues/5715)
+- extended 'listitem batch add' with string content option [#4666](https://github.com/pnp/cli-microsoft365/issues/4666)
+- extended 'external connection schema add' with wait [#5532](https://github.com/pnp/cli-microsoft365/issues/5532)
+- fixed 'spo page add' page creation error [#5674](https://github.com/pnp/cli-microsoft365/issues/5674)
 
 ## [v7.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.2.0)
 
