Update company Milan

--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -481,7 +481,7 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
   },
   {
     name: 'Milan Holemans',
-    company: 'VanRoey',
+    company: 'Xylos',
     github: 'milanholemans',
     x: ''
   },
