--- a/docs/docs/cmd/pa/app/app-remove.mdx
+++ b/docs/docs/cmd/pa/app/app-remove.mdx
@@ -32,7 +32,7 @@ m365 pa app remove [options]
 
 By default, the command will try to remove a Power App. As maker, you are able to delete the Power Apps you own. As administrator, you are also able to delete Power Apps from other users.
 
-To remove the app from another user, use the `asAdmin` option and make sure to specify the `environmentName` option.
+To remove the app you do not own, use the `asAdmin` option and make sure to specify the `environmentName` option.
 
 To remove a model-driven Power App you need administrator permissions.
 
@@ -52,7 +52,7 @@ Removes the specified Power App without confirmation
 m365 pa app remove --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --force
 ```
 
-Removes the specified Power App you don't have access to
+Removes the specified Power App you do not own
 
 ```sh
 m365 pa app remove --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --asAdmin
