First batch of changes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -104,7 +104,7 @@ sidebar_position: 4
 
 **Entra ID**
 
-- [entra group user list](../cmd/entra/group/group-user-list.mdx) - lists users of a specific Entra ID group [#5469](https://github.com/pnp/cli-microsoft365/issues/5469)
+- [entra group user list](../cmd/entra/group/group-user-list.mdx) - lists users of a specific Entra group [#5469](https://github.com/pnp/cli-microsoft365/issues/5469)
 
 ### Changes
 
@@ -137,7 +137,7 @@ sidebar_position: 4
 
 **Entra ID:**
 
-- [entra group remove](../cmd/entra/group/group-remove.mdx) - removes an Entra ID group [#5426](https://github.com/pnp/cli-microsoft365/issues/5426)
+- [entra group remove](../cmd/entra/group/group-remove.mdx) - removes an Entra group [#5426](https://github.com/pnp/cli-microsoft365/issues/5426)
 
 **SharePoint:**
 
@@ -815,7 +815,7 @@ sidebar_position: 4
 
 **Entra ID:**
 
-- [entra group get](../cmd/entra/group/group-get.mdx) - get information about a specified Entra ID Group [#3786](https://github.com/pnp/cli-microsoft365/issues/3786) 
+- [entra group get](../cmd/entra/group/group-get.mdx) - get information about a specified Entra group [#3786](https://github.com/pnp/cli-microsoft365/issues/3786) 
 
 **Context:**
 
@@ -1552,7 +1552,7 @@ sidebar_position: 4
 
 **Entra ID:**
 
-- [entra group list](../cmd/entra/group/group-list.mdx) - lists Entra ID groups [#2622](https://github.com/pnp/cli-microsoft365/issues/2622)
+- [entra group list](../cmd/entra/group/group-list.mdx) - lists Entra groups [#2622](https://github.com/pnp/cli-microsoft365/issues/2622)
 - [entra user hibp](../cmd/entra/user/user-hibp.mdx) - allows you to retrieve all accounts that have been pwned with the specified username [#2476](https://github.com/pnp/cli-microsoft365/issues/2476)
 
 **Planner:**
@@ -3257,9 +3257,9 @@ sidebar_position: 4
 
 - [graph groupsetting add](../cmd/entra/groupsetting/groupsetting-add.mdx) - creates a group setting [#443](https://github.com/pnp/cli-microsoft365/issues/443)
 - [graph groupsetting get](../cmd/entra/groupsetting/groupsetting-get.mdx) - gets information about the particular group setting [#450](https://github.com/pnp/cli-microsoft365/issues/450)
-- [graph groupsetting list](../cmd/entra/groupsetting/groupsetting-list.mdx) - lists Entra ID group settings [#449](https://github.com/pnp/cli-microsoft365/issues/449)
-- [graph groupsettingtemplate get](../cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx) - gets information about the specified Entra ID group settings template [#442](https://github.com/pnp/cli-microsoft365/issues/442)
-- [graph groupsettingtemplate list](../cmd/entra/groupsettingtemplate/groupsettingtemplate-list.mdx) - lists Entra ID group settings templates [#441](https://github.com/pnp/cli-microsoft365/issues/441)
+- [graph groupsetting list](../cmd/entra/groupsetting/groupsetting-list.mdx) - lists Entra group settings [#449](https://github.com/pnp/cli-microsoft365/issues/449)
+- [graph groupsettingtemplate get](../cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx) - gets information about the specified Entra group settings template [#442](https://github.com/pnp/cli-microsoft365/issues/442)
+- [graph groupsettingtemplate list](../cmd/entra/groupsettingtemplate/groupsettingtemplate-list.mdx) - lists Entra group settings templates [#441](https://github.com/pnp/cli-microsoft365/issues/441)
 - [graph user sendmail](../cmd/outlook/mail/mail-send.mdx) - sends e-mail on behalf of the current user [#328](https://github.com/pnp/cli-microsoft365/issues/328)
 
 ### Changes
