--- a/docs/docs/cmd/entra/approleassignment/approleassignment-remove.mdx
+++ b/docs/docs/cmd/entra/approleassignment/approleassignment-remove.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # entra approleassignment remove
 
-Deletes an app role assignment for the specified Entra Application Registration
+Deletes an app role assignment for the specified Entra application registration
 
 ## Usage
 
