--- a/docs/docs/cmd/entra/group/group-remove.mdx
+++ b/docs/docs/cmd/entra/group/group-remove.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # entra group remove
 
-Removes an Entra ID group
+Removes an Entra group
 
 ## Usage
 
@@ -20,10 +20,10 @@ m365 aad group remove [options]
 
 ```md definition-list
 `-i, --id [id]`
-: The ID of the Entra ID group. Specify either `id` or `displayName` but not both.
+: The ID of the Entra group. Specify either `id` or `displayName` but not both.
 
 `-n, --displayName [displayName]`
-: The display name of the Entra ID group. Specify either `id` or `displayName` but not both.
+: The display name of the Entra group. Specify either `id` or `displayName` but not both.
 
 `-f, --force`
 : Don't prompt for confirmation.
@@ -33,13 +33,13 @@ m365 aad group remove [options]
 
 ## Examples
 
-Remove an Entra ID group by display name
+Remove an Entra group by display name
 
 ```sh
 m365 entra group remove --displayName Developers
 ```
 
-Remove an Entra ID group by ID
+Remove an Entra group by ID
 
 ```sh
 m365 entra group remove --id 016bf125-195b-43c5-a1a0-28ccd3192c6d
