--- a/docs/docs/cmd/entra/group/group-get.mdx
+++ b/docs/docs/cmd/entra/group/group-get.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # entra group get
 
-Gets information about the specified Entra ID Group
+Gets information about the specified Entra group
 
 ## Usage
 
@@ -22,23 +22,23 @@ m365 aad group get [options]
 
 ```md definition-list
 `-i, --id [id]`
-: The object Id of the Entra ID group. Specify either `id` or `displayName` but not both.
+: The object Id of the Entra group. Specify either `id` or `displayName` but not both.
 
 `-n, --displayName [displayName]`
-: The display name of the Entra ID group. Specify either `id` or `displayName` but not both.
+: The display name of the Entra group. Specify either `id` or `displayName` but not both.
 ```
 
 <Global />
 
 ## Examples
 
-Get information about an Entra ID Group by id
+Get information about an Entra Group by id
 
 ```sh
 m365 entra group get --id 1caf7dcd-7e83-4c3a-94f7-932a1299c844
 ```
 
-Get information about an Entra ID Group by its display name
+Get information about an Entra Group by its display name
 
 ```sh
 m365 entra group get --displayName Finance
