--- a/docs/docs/cmd/entra/group/group-user-list.mdx
+++ b/docs/docs/cmd/entra/group/group-user-list.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # entra group user list
 
-Lists users of a specific Entra ID group
+Lists users of a specific Entra group
 
 ## Usage
 
@@ -22,10 +22,10 @@ m365 aad group user list [options]
 
 ```md definition-list
 `-i, --groupId [groupId]`
-: The ID of the Entra ID group. Specify `groupId` or `groupDisplayName` but not both.
+: The ID of the Entra group. Specify `groupId` or `groupDisplayName` but not both.
 
 `-n, --groupDisplayName [groupDisplayName]`
-: The display name of the Entra ID group. Specify `groupId` or `groupDisplayName` but not both.
+: The display name of the Entra group. Specify `groupId` or `groupDisplayName` but not both.
 
 `-r, --role [role]`
 : Filter the results to only users with the given role: `Owner`, `Member`.
