--- a/docs/docs/cmd/entra/groupsetting/groupsetting-list.mdx
+++ b/docs/docs/cmd/entra/groupsetting/groupsetting-list.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # entra groupsetting list
 
-Lists Entra ID group settings
+Lists Entra group settings
 
 ## Usage
 
