--- a/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx
+++ b/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # entra groupsettingtemplate get
 
-Gets information about the specified Entra ID group settings template
+Gets information about the specified Entra group settings template
 
 ## Usage
 
