--- a/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-list.mdx
+++ b/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-list.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # entra groupsettingtemplate list
 
-Lists Entra ID group settings templates
+Lists Entra group settings templates
 
 ## Usage
 
