--- a/docs/docs/v3-upgrade-guidance.mdx
+++ b/docs/docs/v3-upgrade-guidance.mdx
@@ -38,7 +38,7 @@ After upgrading to v3, `@pnp/cli-microsoft365`, any scripts that use the `o365` 
 
 ## Renaming of CLI environment variables
 
-In Office 365 CLI v2, we provided two environment variables, `OFFICE365CLI_AADAPPID` and `OFFICE365CLI_TENANT`. These environment variable could be updated to point the CLI to your own custom Entra ID identity to use for logging into your Microsoft 365 tenant instead of using the multi-tenant PnP Management Shell identity used as the default identity.
+In Office 365 CLI v2, we provided two environment variables, `OFFICE365CLI_AADAPPID` and `OFFICE365CLI_TENANT`. These environment variable could be updated to point the CLI to your own custom Entra identity to use for logging into your Microsoft 365 tenant instead of using the multi-tenant PnP Management Shell identity used as the default identity.
 
 Find out more about this feature: [Using your own Entra ID](user-guide/using-own-identity.mdx)
 
