--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -349,7 +349,7 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
   },
   {
     name: 'Jasey Waegebaert',
-    company: 'WAE Consulting',
+    company: 'Xylos',
     github: 'Jwaegebaert',
     x: 'jwaegebaert'
   },
@@ -453,7 +453,7 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     name: 'Martin Macháček',
     company: 'Edhouse',
     github: 'MartinM85',
-    x: '@machym_'
+    x: 'machym_'
   },
   {
     name: 'Mathijs Verbeeck',
