Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -11,7 +11,9 @@ sidebar_position: 4
 - extended [pa app get](../cmd/pa/app/app-get) command with support to run as admin [#5518](https://github.com/pnp/cli-microsoft365/issues/5518)
 - extended [pa app remove](../cmd/pa/app/app-remove) command with support to run as admin [#5519](https://github.com/pnp/cli-microsoft365/issues/5519)
 - fixed [pa app get](../cmd/pa/app/app-get) to throw an error when the app was not found by display name [#5728](https://github.com/pnp/cli-microsoft365/issues/5728)
-- extended 'aad m365group user list' command with extra options and deprecation [#5557](https://github.com/pnp/cli-microsoft365/issues/5557)
+- extended 'entra m365group user list' command with extra options and deprecation [#5557](https://github.com/pnp/cli-microsoft365/issues/5557)
+- renamed 'aad' to 'entra' [#5663](https://github.com/pnp/cli-microsoft365/issues/5663)
+- added support for redirect URLs [#5738](https://github.com/pnp/cli-microsoft365/issues/5738)
 
 ## [v7.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.3.0)
 
