Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -14,6 +14,7 @@ sidebar_position: 4
 - extended 'entra m365group user list' command with extra options and deprecation [#5557](https://github.com/pnp/cli-microsoft365/issues/5557)
 - renamed 'aad' to 'entra' [#5663](https://github.com/pnp/cli-microsoft365/issues/5663)
 - added support for redirect URLs [#5738](https://github.com/pnp/cli-microsoft365/issues/5738)
+- updated build workflow to run on Node@20 [#5743](https://github.com/pnp/cli-microsoft365/issues/5743)
 
 ## [v7.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.3.0)
 
