--- a/docs/docs/cmd/spo/contenttype/contenttype-set.mdx
+++ b/docs/docs/cmd/spo/contenttype/contenttype-set.mdx
@@ -39,7 +39,7 @@ m365 spo contenttype set [options]
 
 ## Remarks
 
-:::warning Updating child content types
+:::warning[Updating child content types]
 
 When specifying the `--updateChildren` flag, SharePoint will only propagate the changes that are made in the current request. If you want to know more about updating a content type and propagating changes to child content types, be sure to [read more here](https://learn.microsoft.com/previous-versions/office/developer/sharepoint-2010/ms442695(v=office.14)#considerations-when-updating-child-content-types). 
 
