--- a/docs/docs/contribute/environment-setup.mdx
+++ b/docs/docs/contribute/environment-setup.mdx
@@ -2,7 +2,7 @@
 
 Setting up your local copy of the project for development and testing is essential. Follow the steps below to configure your environment.
 
-:::info Install prerequisites
+:::info[Install prerequisites]
 
 Before you start contributing to this project, you will need **node@20** and **npm@10** installed.
 
