--- a/docs/docs/cmd/spo/customaction/customaction-set.mdx
+++ b/docs/docs/cmd/spo/customaction/customaction-set.mdx
@@ -85,7 +85,7 @@ The `--rights` option accepts **case-sensitive** values.
 
 Note, specifying the scope option might speed up the execution of the command, but would not update the scope. If the scope has to be changed, then the existing custom action should be removed and new should be added with different scope.
 
-:::warning Escaping JSON in PowerShell
+:::warning[Escaping JSON in PowerShell]
 
 When using the `--clientSideComponentProperties` option it's possible to enter a JSON string. In PowerShell 5 to 7.2 [specific escaping rules](./../../../user-guide/using-cli.mdx#escaping-double-quotes-in-powershell) apply due to an issue. Remember that you can also use [file tokens](./../../../user-guide/using-cli.mdx#passing-complex-content-into-cli-options) instead.
 
