--- a/docs/docs/user-guide/using-cli.mdx
+++ b/docs/docs/user-guide/using-cli.mdx
@@ -52,7 +52,7 @@ Some options are required and necessary for the particular command to execute, w
 
 Some options in the CLI expect boolean values like `true` or `false`. The CLI for Microsoft 365 has the following definition for booleans:
 
-:::info Definition of Booleans
+:::info[Definition of Booleans]
 
 Booleans are case-insensitive and are represented by the following values.  
 True: 1, yes, true, on  
