Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -15,6 +15,8 @@ sidebar_position: 4
 - renamed 'aad' to 'entra' [#5663](https://github.com/pnp/cli-microsoft365/issues/5663)
 - added support for redirect URLs [#5738](https://github.com/pnp/cli-microsoft365/issues/5738)
 - updated build workflow to run on Node@20 [#5743](https://github.com/pnp/cli-microsoft365/issues/5743)
+- fixed issue where short options were included as unknown options [#5750](https://github.com/pnp/cli-microsoft365/issues/5750)
+- fixed admonitions being inproperly displayed in terminal [#5746](https://github.com/pnp/cli-microsoft365/issues/5746)
 
 ## [v7.3.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.3.0)
 
